Add Call To Action Component

--- a/client/index.html
+++ b/client/index.html
@@ -24,13 +24,14 @@
 
           <button class="readybtn" onclick="readyfn()">I am ready</button>
           <p style="margin-top: 5%; font-size: small;">Trust us, We value your privacy and will never send the irrelevant information</p>
+          <p class="thanks"></p>
         </div>
         
       </div>
     </div>
     <div id="root"></div>
     <div class="portal"></div>
-    <!-- <script type="module" src="/src/index.jsx"></script> -->
+    <script type="module" src="/src/index.jsx"></script>
   </body>
   <script src="callToAction.js"></script>
 </html>
